--- a/web-modal-sdk/evm/react-evm-web3auth-example/package.json
+++ b/web-modal-sdk/evm/react-evm-web3auth-example/package.json
@@ -12,13 +12,15 @@
     "@types/react-dom": "^18.0.5",
     "@web3auth/base": "^2.1.2",
     "@web3auth/web3auth": "^2.1.2",
-    "web3": "^1.7.0",
+    "dotenv": "^16.0.3",
     "ethers": "^5.6.9",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-scripts": "5.0.1",
+    "react-router-dom": "^6.4.2",
+    "react-scripts": "^5.0.1",
     "typescript": "^4.7.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "web3": "^1.7.0"
   },
   "eslintConfig": {
     "extends": [
