--- a/web-core-sdk/custom-authentication/twitch-react-core-example/package.json
+++ b/web-core-sdk/custom-authentication/twitch-react-core-example/package.json
@@ -18,7 +18,7 @@
     "ethers": "^5.6.9",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
     "typescript": "^4.7.3",
     "web-vitals": "^2.1.4",
     "web3": "^1.7.0"
