--- a/web-core-sdk/solana/react-solana-core-example/package.json
+++ b/web-core-sdk/solana/react-solana-core-example/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@solana/web3.js": "^1.36.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,13 +12,12 @@
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
     "@web3auth/base": "^2.1.2",
-    "@web3auth/web3auth": "^2.1.2",
     "@web3auth/openlogin-adapter": "2.1.2",
     "@web3auth/solana-provider": "^2.1.2",
-    "@solana/web3.js": "^1.36.0",
+    "@web3auth/web3auth": "^2.1.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
     "typescript": "^4.7.3",
     "web-vitals": "^2.1.4"
   },
