--- a/web-modal-sdk/tezos/react-tezos-web3auth-example/package.json
+++ b/web-modal-sdk/tezos/react-tezos-web3auth-example/package.json
@@ -3,23 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@taquito/signer": "^13.0.0",
+    "@taquito/taquito": "^13.0.0",
+    "@taquito/utils": "^13.0.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tezos-core-tools/crypto-utils": "^0.0.7",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.38",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
     "@web3auth/base": "^2.1.2",
-    "@web3auth/web3auth": "^2.1.2",
     "@web3auth/openlogin-adapter": "^2.1.2",
-    "@taquito/signer": "^13.0.0",
-    "@taquito/taquito": "^13.0.0",
-    "@taquito/utils": "^13.0.0",
-    "@tezos-core-tools/crypto-utils": "^0.0.7",
+    "@web3auth/web3auth": "^2.1.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
     "typescript": "^4.7.3",
     "web-vitals": "^2.1.4"
   },
